--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ input{
     padding: 35px;
     outline: none;
     border: none;
-    font-size: 16px;
+    font-size: 24px;
     margin-bottom: 25px;
+    transition: .3s;
 }
 input::placeholder{
     color: rgba(0, 0, 0, 0.41);
@@ -70,4 +71,13 @@ button:hover{
 .button__ac{
     width: 100%;
     height: 60px;
+    transition: .3s;
+}
+.button__ac:hover{
+    background: #F95D53;
+    color: white;
+}
+.input__positive{
+    background: #00FF66;
+    color: white;
 }
